--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/node": "^7.10.14",
     "dotenv": "^10.0.0",
+    "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^2.6.1",
     "node-xlsx": "^0.17.1",
     "xlsx": "^0.17.1",
