minio save was created

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/minio": "^7.0.10",
     "@types/node": "^7.10.14",
     "dotenv": "^10.0.0",
+    "exceljs": "^4.3.0",
     "fluent-ffmpeg": "^2.1.2",
     "minio": "^7.0.19",
     "node-fetch": "^2.6.1",
